--- a/technology.html
+++ b/technology.html
@@ -50,51 +50,51 @@
   </div><!--end header-->
 
 
-  <div id="main">
-
+  <div id="main" class="technology-inner">
 
     <div class="container">
       <div class="row">
-        <div class="cols col-12 border">
-          <img src="img/bord.png">
-        </div>
-     </div>
+        <div class="cols col-12">
 
-      <div class="row technology">
+        <h1>Технології</h1>
 
-        <div class="cols col-3 first">
-          <div class="cols col-12">
-            <img src="img/icon-3.png">
-            <p>Природня <br>вентиляція</p>
-          </div>
-          <div class="cols col-12">
-            <img src="img/icon-1.png">
-            <p>Довговічність</p>
-          </div>
-          <div class="cols col-12">
-            <img src="img/icon-2.png">
-            <p>Енергоефективність</p>
-          </div>
+        <div class="border">
+          <img src="img/bord-w.png">
         </div>
 
+      </div>
+
+      <div class="row">
         <div class="cols col-6">
-          <img src="img/technology.png">
+          <img src="img/technology-inner.png">
+        </div>
+        <div class="cols col-6">
+          <p>
+            Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec ut molestie orci. Mauris sed magna bibendum, egestas est eget, mattis tortor. Nam finibus massa sed consectetur ornare. Nulla nec libero vitae metus varius dignissim. Donec porta porttitor nisl volutpat molestie. Quisque vehicula dui eu ipsum vehicula cursus.
+          </p>
+        </div>
+      </div>
+
+      <div class="row">
+        <div class="cols col-6">
+          <p>
+            Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec ut molestie orci. Mauris sed magna bibendum, egestas est eget, mattis tortor. Nam finibus massa sed consectetur ornare. Nulla nec libero vitae metus varius dignissim. Donec porta porttitor nisl volutpat molestie. Quisque vehicula dui eu ipsum vehicula cursus.
+          </p>
+        </div>
+        <div class="cols col-6">
+          <img src="img/technology-inner1.png">
+        </div>
+      </div>
+        <div class="cols col-6">
+          <img src="img/technology-inner2.png">
+        </div>
+        <div class="cols col-6">
+          <p>
+            Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec ut molestie orci. Mauris sed magna bibendum, egestas est eget, mattis tortor. Nam finibus massa sed consectetur ornare. Nulla nec libero vitae metus varius dignissim. Donec porta porttitor nisl volutpat molestie. Quisque vehicula dui eu ipsum vehicula cursus.
+          </p>
         </div>
 
-        <div class="cols col-3 second">
-          <div class="cols col-12">
-            <img src="img/icon-4.png">
-            <p>Не потребує <br> оздоблення</p>
-          </div>
-          <div class="cols col-12">
-            <img src="img/icon-5.png">
-            <p>Екологічність</p>
-          </div>
-          <div class="cols col-12">
-            <img src="img/icon-6.png">
-            <p>Збереження температури<br> в приміщенні</p>
-          </div>
-        </div>
+      </div>
 
       </div>
 
