--- a/designe-inner.html
+++ b/designe-inner.html
@@ -43,8 +43,8 @@
               <li><a href="index.html">Головна</a></li>
               <li><a href="technology.html">Технології</a></li>
               <li><a href="gallery.html">Галерея</a></li>
-              <li><a href="project.html" class="active">Проекти</a></li>
-              <li><a href="designe.html">Дизайн</a></li>
+              <li><a href="project.html">Проекти</a></li>
+              <li><a href="designe.html" class="active">Дизайн</a></li>
             </ul>
           </div>
         </div>
@@ -114,7 +114,7 @@
 
       <div class="cols col-12">
         <div class="btn-proect">
-            <a href="project.html" class="btn-main">Замовити прорахунок</a>
+            <a href="project.html" class="btn-main">Замовити дизайн</a>
         </div>
       </div>
 
@@ -126,7 +126,7 @@
 
         <div class="proect-form">
           <p class="grey">НЕ ЗНАЙШЛИ ПІДХОДЯЩИЙ ПРОЕКТ? </p>
-          <p  class="green">Залишіть заявку і наш архітектор підбере проект<br>згідно ваших побажань</p>
+          <p  class="green">Залишіть заявку і наш дизайнер підбере проект<br>згідно ваших побажань</p>
           <div class="border-grey"></div>
           <form>
             <input type="text" placeholder="ІМЯ">
