--- a/designe.html
+++ b/designe.html
@@ -38,9 +38,9 @@
             <ul>
               <li><a href="index.html">Головна</a></li>
               <li><a href="technology.html">Технології</a></li>
-              <li><a href="gallery.html" class="active">Галерея</a></li>
+              <li><a href="gallery.html">Галерея</a></li>
               <li><a href="project.html">Проекти</a></li>
-              <li><a href="designe.html">Дизайн</a></li>
+              <li><a href="designe.html" class="active">Дизайн</a></li>
             </ul>
           </div>
         </div>
@@ -56,8 +56,7 @@
 <div class="row">
   <div class="cols col-12">
 
-  <h1>Галерея</h1>
-
+  <h1>Дизайн</h1>
   <div class="border">
     <img src="img/bord.png">
   </div>
@@ -69,13 +68,12 @@
         <div class="img-proects">
           <img src="img/proect.png">
         </div>
-      </div>
-    </div>
-
-    <div class="cols col-4">
-      <div>
-        <div class="img-proects">
-          <img src="img/proect.png">
+        <div class="name-proects">
+          <h4>Проект 1</h4>
+          <div class="border">
+            <img src="img/bord.png">
+          </div>
+          <a href="designe-inner.html" class="btn">Детальніше</a>
         </div>
       </div>
     </div>
@@ -85,14 +83,12 @@
         <div class="img-proects">
           <img src="img/proect.png">
         </div>
-    </div>
-    </div>
-
-
-    <div class="cols col-4">
-      <div>
-        <div class="img-proects">
-          <img src="img/proect.png">
+        <div class="name-proects">
+          <h4>Проект 1</h4>
+          <div class="border">
+            <img src="img/bord.png">
+          </div>
+          <a href="designe-inner.html" class="btn">Детальніше</a>
         </div>
       </div>
     </div>
@@ -102,13 +98,29 @@
         <div class="img-proects">
           <img src="img/proect.png">
         </div>
+        <div class="name-proects">
+          <h4>Проект 1</h4>
+          <div class="border">
+            <img src="img/bord.png">
+          </div>
+          <a href="designe-inner.html">Детальніше</a>
+        </div>
       </div>
     </div>
+    </div>
+
 
     <div class="cols col-4">
       <div>
         <div class="img-proects">
           <img src="img/proect.png">
+        </div>
+        <div class="name-proects">
+          <h4>Проект 1</h4>
+          <div class="border">
+            <img src="img/bord.png">
+          </div>
+          <a href="designe-inner.html" class="btn">Детальніше</a>
         </div>
       </div>
     </div>
@@ -118,13 +130,12 @@
         <div class="img-proects">
           <img src="img/proect.png">
         </div>
-      </div>
-    </div>
-
-    <div class="cols col-4">
-      <div>
-        <div class="img-proects">
-          <img src="img/proect.png">
+        <div class="name-proects">
+          <h4>Проект 1</h4>
+          <div class="border">
+            <img src="img/bord.png">
+          </div>
+          <a href="designe-inner.html" class="btn">Детальніше</a>
         </div>
       </div>
     </div>
@@ -134,34 +145,16 @@
         <div class="img-proects">
           <img src="img/proect.png">
         </div>
-      </div>
-    </div>
-
-    <div class="cols col-4">
-      <div>
-        <div class="img-proects">
-          <img src="img/proect.png">
+        <div class="name-proects">
+          <h4>Проект 1</h4>
+          <div class="border">
+            <img src="img/bord.png">
+          </div>
+          <a href="designe-inner.html">Детальніше</a>
         </div>
       </div>
     </div>
-
-    <div class="cols col-4">
-      <div>
-        <div class="img-proects">
-          <img src="img/proect.png">
-        </div>
-      </div>
     </div>
-
-    <div class="cols col-4">
-      <div>
-        <div class="img-proects">
-          <img src="img/proect.png">
-        </div>
-      </div>
-    </div>
-
-</div>
 
 
 
