--- a/project.html
+++ b/project.html
@@ -40,7 +40,7 @@
               <li><a href="technology.html">Технології</a></li>
               <li><a href="gallery.html">Галерея</a></li>
               <li><a href="project.html" class="active">Проекти</a></li>
-              <li><a href="#">Дизайн</a></li>
+              <li><a href="designe.html">Дизайн</a></li>
             </ul>
           </div>
         </div>
