--- a/index.html
+++ b/index.html
@@ -6,10 +6,9 @@
  <meta name="viewport" content="width=device-width, initial-scale=1">
  <link rel="stylesheet" type="text/css" href="css/style.css">
  <link rel="stylesheet" href="fonts/font-awesome/css/font-awesome.min.css">
+ <link rel="stylesheet" href="css/responsiveslides.css">
 
 
- <link rel="stylesheet" type="text/css" href="slick/slick.css">
- <link rel="stylesheet" type="text/css" href="slick/slick-theme.css">
 
 </head>
 
@@ -40,7 +39,7 @@
               <li><a href="technology.html">Технології</a></li>
               <li><a href="gallery.html">Галерея</a></li>
               <li><a href="project.html">Проекти</a></li>
-              <li><a href="#">Дизайн</a></li>
+              <li><a href="designe.html">Дизайн</a></li>
             </ul>
           </div>
         </div>
@@ -50,20 +49,35 @@
   </div><!--end header-->
 
 
-  <section class="regular slider">
-     <div>
-       <img src="img/slide1.jpg">
+
+<div class="container">
+  <!-- Slideshow 4 -->
+      <div class="callbacks_container">
+        <ul class="rslides" id="slider4">
+          <li>
+            <img src="img/slide1.jpg" alt="">
+          </li>
+          <li>
+            <img src="img/slide2.jpg" alt="">
+          </li>
+          <li>
+            <img src="img/slide3.jpg" alt="">
+          </li>
+          <li>
+            <img src="img/slide4.jpg" alt="">
+          </li>
+        </ul>
       </div>
-     <div>
-       <img src="img/slide2.jpg">
-     </div>
-     <div>
-       <img src="img/slide3.jpg">
-     </div>
-     <div>
-       <img src="img/slide4.jpg">
-     </div>
-</section><!--end slider-->
+</div>
+
+<div class="container slogan">
+  <div class="row">
+    <div class="cols col-12">
+      <h1>Naturstammblockhäuser, kanadischer Technologie</h1>
+    </div>
+  </div>
+</div>
+
 
   <div id="main">
 
@@ -200,23 +214,29 @@
 <!--Slider-->
 
 <script src="https://code.jquery.com/jquery-2.2.0.min.js" type="text/javascript"></script>
-<script src="slick/slick.js" type="text/javascript" charset="utf-8"></script>
-<script type="text/javascript">
-  $(document).on('ready', function() {
 
-    $(".regular").slick({
-            dots: false,
-            infinite: true,
-            slidesToShow: 1,
-            slidesToScroll: 1,
-            infinite: true,
-            autoplay:true,
-            arrows: false,
-            pauseOnFocus:false,
-            pauseOnHover:false,
-          });
+  <script src="js/responsiveslides.min.js"></script>
+  <script>
+    // You can also use "$(window).load(function() {"
+    $(function () {
+
+      // Slideshow 4
+      $("#slider4").responsiveSlides({
+        auto: true,
+        pager: false,
+        nav: false,
+        speed: 500,
+        namespace: "callbacks",
+        before: function () {
+          $('.events').append("<li>before event fired.</li>");
+        },
+        after: function () {
+          $('.events').append("<li>after event fired.</li>");
+        }
+      });
+
     });
-</script>
+  </script>
 
 
 </body>
