--- a/technology.html
+++ b/technology.html
@@ -40,7 +40,7 @@
               <li><a href="technology.html" class="active">Технології</a></li>
               <li><a href="gallery.html">Галерея</a></li>
               <li><a href="project.html">Проекти</a></li>
-              <li><a href="#">Дизайн</a></li>
+              <li><a href="designe.html">Дизайн</a></li>
             </ul>
           </div>
         </div>
