--- a/gallery.html
+++ b/gallery.html
@@ -67,7 +67,7 @@
     <div class="cols col-4">
       <div>
         <div class="img-proects">
-          <img src="img/proect.png">
+          <img src="img/gallery/1 (2).jpg">
         </div>
       </div>
     </div>
@@ -75,7 +75,7 @@
     <div class="cols col-4">
       <div>
         <div class="img-proects">
-          <img src="img/proect.png">
+          <img src="img/gallery/1_1.jpg">
         </div>
       </div>
     </div>
@@ -83,7 +83,7 @@
     <div class="cols col-4">
       <div>
         <div class="img-proects">
-          <img src="img/proect.png">
+          <img src="img/gallery/1_2.jpg">
         </div>
     </div>
     </div>
@@ -92,15 +92,7 @@
     <div class="cols col-4">
       <div>
         <div class="img-proects">
-          <img src="img/proect.png">
-        </div>
-      </div>
-    </div>
-
-    <div class="cols col-4">
-      <div>
-        <div class="img-proects">
-          <img src="img/proect.png">
+          <img src="img/gallery/1_12.jpg">
         </div>
       </div>
     </div>
@@ -108,7 +100,7 @@
     <div class="cols col-4">
       <div>
         <div class="img-proects">
-          <img src="img/proect.png">
+          <img src="img/gallery/3.jpg">
         </div>
       </div>
     </div>
@@ -116,7 +108,7 @@
     <div class="cols col-4">
       <div>
         <div class="img-proects">
-          <img src="img/proect.png">
+          <img src="img/gallery/11.jpg">
         </div>
       </div>
     </div>
@@ -124,7 +116,7 @@
     <div class="cols col-4">
       <div>
         <div class="img-proects">
-          <img src="img/proect.png">
+          <img src="img/gallery/12_1.jpg">
         </div>
       </div>
     </div>
@@ -132,7 +124,7 @@
     <div class="cols col-4">
       <div>
         <div class="img-proects">
-          <img src="img/proect.png">
+          <img src="img/gallery/87987955.jpg">
         </div>
       </div>
     </div>
@@ -140,7 +132,7 @@
     <div class="cols col-4">
       <div>
         <div class="img-proects">
-          <img src="img/proect.png">
+          <img src="img/gallery/88077745.jpg">
         </div>
       </div>
     </div>
@@ -148,7 +140,7 @@
     <div class="cols col-4">
       <div>
         <div class="img-proects">
-          <img src="img/proect.png">
+          <img src="img/gallery/DSC_0001.jpg">
         </div>
       </div>
     </div>
@@ -156,7 +148,175 @@
     <div class="cols col-4">
       <div>
         <div class="img-proects">
-          <img src="img/proect.png">
+          <img src="img/gallery/DSC_0013.jpg">
+        </div>
+      </div>
+    </div>
+
+    <div class="cols col-4">
+      <div>
+        <div class="img-proects">
+          <img src="img/gallery/DSC_0019.jpg">
+        </div>
+      </div>
+    </div>
+
+    <div class="cols col-4">
+      <div>
+        <div class="img-proects">
+          <img src="img/gallery/DSC_0021.jpg">
+        </div>
+      </div>
+    </div>
+
+    <div class="cols col-4">
+      <div>
+        <div class="img-proects">
+          <img src="img/gallery/DSC_0024.jpg">
+        </div>
+      </div>
+    </div>
+
+    <div class="cols col-4">
+      <div>
+        <div class="img-proects">
+          <img src="img/gallery/DSC_0025.jpg">
+        </div>
+      </div>
+    </div>
+
+    <div class="cols col-4">
+      <div>
+        <div class="img-proects">
+          <img src="img/gallery/DSC_0027.jpg">
+        </div>
+      </div>
+    </div>
+
+    <div class="cols col-4">
+      <div>
+        <div class="img-proects">
+          <img src="img/gallery/DSC_0034.jpg">
+        </div>
+      </div>
+    </div>
+
+    <div class="cols col-4">
+      <div>
+        <div class="img-proects">
+          <img src="img/gallery/DSC_0041.jpg">
+        </div>
+      </div>
+    </div>
+
+    <div class="cols col-4">
+      <div>
+        <div class="img-proects">
+          <img src="img/gallery/DSC_0047.jpg">
+        </div>
+      </div>
+    </div>
+
+    <div class="cols col-4">
+      <div>
+        <div class="img-proects">
+          <img src="img/gallery/DSC_0050.jpg">
+        </div>
+      </div>
+    </div>
+
+    <div class="cols col-4">
+      <div>
+        <div class="img-proects">
+          <img src="img/gallery/DSC_0053.jpg">
+        </div>
+      </div>
+    </div>
+
+    <div class="cols col-4">
+      <div>
+        <div class="img-proects">
+          <img src="img/gallery/DSC_0057.JPG">
+        </div>
+      </div>
+    </div>
+
+    <div class="cols col-4">
+      <div>
+        <div class="img-proects">
+          <img src="img/gallery/DSC_0076.jpg">
+        </div>
+      </div>
+    </div>
+
+    <div class="cols col-4">
+      <div>
+        <div class="img-proects">
+          <img src="img/gallery/DSC_0374 - копия.JPG">
+        </div>
+      </div>
+    </div>
+
+    <div class="cols col-4">
+      <div>
+        <div class="img-proects">
+          <img src="img/gallery/DSC_0490.JPG">
+        </div>
+      </div>
+    </div>
+
+    <div class="cols col-4">
+      <div>
+        <div class="img-proects">
+          <img src="img/gallery/DSC_0719.JPG">
+        </div>
+      </div>
+    </div>
+
+    <div class="cols col-4">
+      <div>
+        <div class="img-proects">
+          <img src="img/gallery/hzAejj2QvJ8.jpg">
+        </div>
+      </div>
+    </div>
+
+    <div class="cols col-4">
+      <div>
+        <div class="img-proects">
+          <img src="img/gallery/image-14-06-16-09-38-2.jpg">
+        </div>
+      </div>
+    </div>
+
+    <div class="cols col-4">
+      <div>
+        <div class="img-proects">
+          <img src="img/gallery/IMG_2965-04-03-17-01-53.jpg">
+        </div>
+      </div>
+    </div>
+
+    <div class="cols col-4">
+      <div>
+        <div class="img-proects">
+          <img src="img/gallery/IMG_3644.JPG">
+        </div>
+      </div>
+    </div>
+
+    <div class="cols col-4">
+      <div>
+        <div class="img-proects">
+          <img src="img/gallery/IMG_20170428_105221.jpg">
+        </div>
+      </div>
+    </div>
+
+    <div class="cols col-4">
+      <div>
+        <div class="img-proects">
+          <img src="img/gallery/unnamed.jpg">
         </div>
       </div>
     </div>
