--- a/designe.html
+++ b/designe.html
@@ -49,119 +49,56 @@
     </div><!--end wrap-->
   </div><!--end header-->
 
-<div id="main">
 
-<div class="container proects-inner">
+  <div id="main" class="designe-inner">
 
-<div class="row">
-  <div class="cols col-12">
+    <div class="container">
+      <div class="row">
+        <div class="cols col-12">
 
-  <h1>Дизайн</h1>
-  <div class="border">
-    <img src="img/bord.png">
-  </div>
+        <h1>Дизайн</h1>
 
-
-
-    <div class="cols col-4">
-      <div>
-        <div class="img-proects">
-          <img src="img/proect.png">
+        <div class="border">
+          <img src="img/bord-w.png">
         </div>
-        <div class="name-proects">
-          <h4>Проект 1</h4>
-          <div class="border">
-            <img src="img/bord.png">
-          </div>
-          <a href="designe-inner.html" class="btn">Детальніше</a>
+
+      </div>
+
+      <div class="row">
+        <div class="cols col-6">
+          <img src="img/technology-inner.png">
+        </div>
+        <div class="cols col-6">
+          <p>
+            Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec ut molestie orci. Mauris sed magna bibendum, egestas est eget, mattis tortor. Nam finibus massa sed consectetur ornare. Nulla nec libero vitae metus varius dignissim. Donec porta porttitor nisl volutpat molestie. Quisque vehicula dui eu ipsum vehicula cursus.
+          </p>
         </div>
       </div>
-    </div>
 
-    <div class="cols col-4">
-      <div>
-        <div class="img-proects">
-          <img src="img/proect.png">
+      <div class="row">
+        <div class="cols col-6">
+          <p>
+            Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec ut molestie orci. Mauris sed magna bibendum, egestas est eget, mattis tortor. Nam finibus massa sed consectetur ornare. Nulla nec libero vitae metus varius dignissim. Donec porta porttitor nisl volutpat molestie. Quisque vehicula dui eu ipsum vehicula cursus.
+          </p>
         </div>
-        <div class="name-proects">
-          <h4>Проект 1</h4>
-          <div class="border">
-            <img src="img/bord.png">
-          </div>
-          <a href="designe-inner.html" class="btn">Детальніше</a>
+        <div class="cols col-6">
+          <img src="img/technology-inner1.png">
         </div>
       </div>
-    </div>
+        <div class="cols col-6">
+          <img src="img/technology-inner2.png">
+        </div>
+        <div class="cols col-6">
+          <p>
+            Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec ut molestie orci. Mauris sed magna bibendum, egestas est eget, mattis tortor. Nam finibus massa sed consectetur ornare. Nulla nec libero vitae metus varius dignissim. Donec porta porttitor nisl volutpat molestie. Quisque vehicula dui eu ipsum vehicula cursus.
+          </p>
+        </div>
 
-    <div class="cols col-4">
-      <div>
-        <div class="img-proects">
-          <img src="img/proect.png">
-        </div>
-        <div class="name-proects">
-          <h4>Проект 1</h4>
-          <div class="border">
-            <img src="img/bord.png">
-          </div>
-          <a href="designe-inner.html">Детальніше</a>
-        </div>
       </div>
-    </div>
-    </div>
 
-
-    <div class="cols col-4">
-      <div>
-        <div class="img-proects">
-          <img src="img/proect.png">
-        </div>
-        <div class="name-proects">
-          <h4>Проект 1</h4>
-          <div class="border">
-            <img src="img/bord.png">
-          </div>
-          <a href="designe-inner.html" class="btn">Детальніше</a>
-        </div>
       </div>
-    </div>
 
-    <div class="cols col-4">
-      <div>
-        <div class="img-proects">
-          <img src="img/proect.png">
-        </div>
-        <div class="name-proects">
-          <h4>Проект 1</h4>
-          <div class="border">
-            <img src="img/bord.png">
-          </div>
-          <a href="designe-inner.html" class="btn">Детальніше</a>
-        </div>
-      </div>
-    </div>
-
-    <div class="cols col-4">
-      <div>
-        <div class="img-proects">
-          <img src="img/proect.png">
-        </div>
-        <div class="name-proects">
-          <h4>Проект 1</h4>
-          <div class="border">
-            <img src="img/bord.png">
-          </div>
-          <a href="designe-inner.html">Детальніше</a>
-        </div>
-      </div>
-    </div>
-    </div>
-
-
-
-</div>
-
-</div><!--end container proects-->
-
+    </div> <!--end container technology-->
 
   </div><!--end main-->
 
