--- a/designe.html
+++ b/designe.html
@@ -66,7 +66,7 @@
 
       <div class="row">
         <div class="cols col-6">
-          <img src="img/technology-inner.png">
+          <img src="img/designe-1.png">
         </div>
         <div class="cols col-6">
           <p>
@@ -82,16 +82,30 @@
           </p>
         </div>
         <div class="cols col-6">
-          <img src="img/technology-inner1.png">
+          <img src="img/designe-2.png">
         </div>
       </div>
+
+      <div class="row">
         <div class="cols col-6">
-          <img src="img/technology-inner2.png">
+          <img src="img/designe-3.png">
         </div>
         <div class="cols col-6">
           <p>
             Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec ut molestie orci. Mauris sed magna bibendum, egestas est eget, mattis tortor. Nam finibus massa sed consectetur ornare. Nulla nec libero vitae metus varius dignissim. Donec porta porttitor nisl volutpat molestie. Quisque vehicula dui eu ipsum vehicula cursus.
           </p>
+        </div>
+      </div>
+
+        <div class="row">
+          <div class="cols col-6">
+            <p>
+              Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec ut molestie orci. Mauris sed magna bibendum, egestas est eget, mattis tortor. Nam finibus massa sed consectetur ornare. Nulla nec libero vitae metus varius dignissim. Donec porta porttitor nisl volutpat molestie. Quisque vehicula dui eu ipsum vehicula cursus.
+            </p>
+          </div>
+          <div class="cols col-6">
+            <img src="img/designe-4.png">
+          </div>
         </div>
 
       </div>
