--- a/index.html
+++ b/index.html
@@ -25,8 +25,10 @@
 
           <div class="cols col-6 phone">
             <ul>
-              <li>+38  000 00 00 000</li>
-              <li>asdvdger@gmail.com</li>
+              <li>+49(0)1702078827</li>
+            <li>+49(0)4313393912</li>
+
+              <li>Jacobi@karpatenblockhaus</li>
             </ul>
           </div>
         </div>
