--- a/index.html
+++ b/index.html
@@ -33,9 +33,32 @@
           </div>
         </div>
     </div>
-    <div class="container menu">
+    <div class="container menu-top">
         <div class="row">
           <div class="cols col-8 main-menu">
+
+            <div class="menu menu-mob">
+                  <!-- Иконка меню -->
+                  <div class="icon-close">
+                    <img src="img/close-btn.png">
+                  </div>
+
+                  <!-- Меню -->
+                  <ul>
+                    <li><a href="index.html" class="active">Головна</a></li>
+                    <li><a href="technology.html">Технології</a></li>
+                    <li><a href="gallery.html">Галерея</a></li>
+                    <li><a href="project.html">Проекти</a></li>
+                    <li><a href="designe.html">Дизайн</a></li>
+                  </ul>
+                </div>
+
+
+                  <div class="icon-menu">
+                    <img src="img/menu-ham-icon.png">
+                  </div>
+
+          <div class="menu-desc">
             <ul>
               <li><a href="index.html" class="active">Головна</a></li>
               <li><a href="technology.html">Технології</a></li>
@@ -108,7 +131,7 @@
           </div>
         </div>
 
-        <div class="cols col-6">
+        <div class="cols col-6 img-tech">
           <img src="img/technology.png">
         </div>
 
@@ -240,6 +263,7 @@
     });
   </script>
 
+   <script src="js/menu.js"></script>
 
 </body>
 </html>
