--- a/technology.html
+++ b/technology.html
@@ -26,15 +26,40 @@
 
           <div class="cols col-6 phone">
             <ul>
-              <li>+38  000 00 00 000</li>
-              <li>asdvdger@gmail.com</li>
+              <li>+49(0)1702078827</li>
+            <li>+49(0)4313393912</li>
+
+              <li>Jacobi@karpatenblockhaus</li>
             </ul>
           </div>
         </div>
     </div>
-    <div class="container menu">
+    <div class="container menu-top">
         <div class="row">
           <div class="cols col-8 main-menu">
+
+            <div class="menu menu-mob">
+                  <!-- Иконка меню -->
+                  <div class="icon-close">
+                    <img src="img/close-btn.png">
+                  </div>
+
+                  <!-- Меню -->
+                  <ul>
+                    <li><a href="index.html">Головна</a></li>
+                    <li><a href="technology.html" class="active">Технології</a></li>
+                    <li><a href="gallery.html">Галерея</a></li>
+                    <li><a href="project.html">Проекти</a></li>
+                    <li><a href="designe.html">Дизайн</a></li>
+                  </ul>
+                </div>
+
+
+                  <div class="icon-menu">
+                    <img src="img/menu-ham-icon.png">
+                  </div>
+
+          <div class="menu-desc">
             <ul>
               <li><a href="index.html">Головна</a></li>
               <li><a href="technology.html" class="active">Технології</a></li>
@@ -75,7 +100,7 @@
         </div>
       </div>
 
-      <div class="row">
+      <div class="row tech-desc">
         <div class="cols col-6">
           <p>
             Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec ut molestie orci. Mauris sed magna bibendum, egestas est eget, mattis tortor. Nam finibus massa sed consectetur ornare. Nulla nec libero vitae metus varius dignissim. Donec porta porttitor nisl volutpat molestie. Quisque vehicula dui eu ipsum vehicula cursus.
@@ -85,6 +110,20 @@
           <img src="img/technology-inner1.png">
         </div>
       </div>
+
+      <div class="row tech-mob">
+        <div class="cols col-6">
+          <img src="img/technology-inner1.png">
+        </div>
+        <div class="cols col-6">
+          <p>
+            Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec ut molestie orci. Mauris sed magna bibendum, egestas est eget, mattis tortor. Nam finibus massa sed consectetur ornare. Nulla nec libero vitae metus varius dignissim. Donec porta porttitor nisl volutpat molestie. Quisque vehicula dui eu ipsum vehicula cursus.
+          </p>
+        </div>
+      </div>
+
+
+      <div class="row">
         <div class="cols col-6">
           <img src="img/technology-inner2.png">
         </div>
@@ -93,6 +132,7 @@
             Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec ut molestie orci. Mauris sed magna bibendum, egestas est eget, mattis tortor. Nam finibus massa sed consectetur ornare. Nulla nec libero vitae metus varius dignissim. Donec porta porttitor nisl volutpat molestie. Quisque vehicula dui eu ipsum vehicula cursus.
           </p>
         </div>
+      </div>
 
       </div>
 
@@ -131,6 +171,7 @@
     });
 </script>
 
+ <script src="js/menu.js"></script>
 
 </body>
 </html>
