--- a/project-inner.html
+++ b/project-inner.html
@@ -30,15 +30,40 @@
 
           <div class="cols col-6 phone">
             <ul>
-              <li>+38  000 00 00 000</li>
-              <li>asdvdger@gmail.com</li>
+              <li>+49(0)1702078827</li>
+            <li>+49(0)4313393912</li>
+
+              <li>Jacobi@karpatenblockhaus</li>
             </ul>
           </div>
         </div>
     </div>
-    <div class="container menu">
+    <div class="container menu-top">
         <div class="row">
           <div class="cols col-8 main-menu">
+
+            <div class="menu menu-mob">
+                  <!-- Иконка меню -->
+                  <div class="icon-close">
+                    <img src="img/close-btn.png">
+                  </div>
+
+                  <!-- Меню -->
+                  <ul>
+                    <li><a href="index.html">Головна</a></li>
+                    <li><a href="technology.html">Технології</a></li>
+                    <li><a href="gallery.html">Галерея</a></li>
+                    <li><a href="project.html" class="active">Проекти</a></li>
+                    <li><a href="designe.html">Дизайн</a></li>
+                  </ul>
+                </div>
+
+
+                  <div class="icon-menu">
+                    <img src="img/menu-ham-icon.png">
+                  </div>
+
+          <div class="menu-desc">
             <ul>
               <li><a href="index.html">Головна</a></li>
               <li><a href="technology.html">Технології</a></li>
@@ -166,6 +191,7 @@
   });
 </script>
 
+<script src="js/menu.js"></script>
 
 </body>
 </html>
