--- a/designe.html
+++ b/designe.html
@@ -26,15 +26,40 @@
 
           <div class="cols col-6 phone">
             <ul>
-              <li>+38  000 00 00 000</li>
-              <li>asdvdger@gmail.com</li>
+              <li>+49(0)1702078827</li>
+            <li>+49(0)4313393912</li>
+
+              <li>Jacobi@karpatenblockhaus</li>
             </ul>
           </div>
         </div>
     </div>
-    <div class="container menu">
+    <div class="container menu-top">
         <div class="row">
           <div class="cols col-8 main-menu">
+
+            <div class="menu menu-mob">
+                  <!-- Иконка меню -->
+                  <div class="icon-close">
+                    <img src="img/close-btn.png">
+                  </div>
+
+                  <!-- Меню -->
+                  <ul>
+                    <li><a href="index.html">Головна</a></li>
+                    <li><a href="technology.html">Технології</a></li>
+                    <li><a href="gallery.html">Галерея</a></li>
+                    <li><a href="project.html">Проекти</a></li>
+                    <li><a href="designe.html" class="active">Дизайн</a></li>
+                  </ul>
+                </div>
+
+
+                  <div class="icon-menu">
+                    <img src="img/menu-ham-icon.png">
+                  </div>
+
+          <div class="menu-desc">
             <ul>
               <li><a href="index.html">Головна</a></li>
               <li><a href="technology.html">Технології</a></li>
@@ -44,7 +69,6 @@
             </ul>
           </div>
         </div>
-
       </div><!--end container-->
     </div><!--end wrap-->
   </div><!--end header-->
@@ -75,7 +99,19 @@
         </div>
       </div>
 
-      <div class="row">
+      <div class="row designe-mob">
+        <div class="cols col-6">
+          <img src="img/designe-2.png">
+        </div>
+        <div class="cols col-6">
+          <p>
+            Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec ut molestie orci. Mauris sed magna bibendum, egestas est eget, mattis tortor. Nam finibus massa sed consectetur ornare. Nulla nec libero vitae metus varius dignissim. Donec porta porttitor nisl volutpat molestie. Quisque vehicula dui eu ipsum vehicula cursus.
+          </p>
+        </div>
+      </div>
+
+
+      <div class="row designe-desc">
         <div class="cols col-6">
           <p>
             Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec ut molestie orci. Mauris sed magna bibendum, egestas est eget, mattis tortor. Nam finibus massa sed consectetur ornare. Nulla nec libero vitae metus varius dignissim. Donec porta porttitor nisl volutpat molestie. Quisque vehicula dui eu ipsum vehicula cursus.
@@ -97,7 +133,21 @@
         </div>
       </div>
 
-        <div class="row">
+
+      <div class="row designe-mob">
+        <div class="cols col-6">
+          <img src="img/designe-4.png">
+        </div>
+        <div class="cols col-6">
+          <p>
+            Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec ut molestie orci. Mauris sed magna bibendum, egestas est eget, mattis tortor. Nam finibus massa sed consectetur ornare. Nulla nec libero vitae metus varius dignissim. Donec porta porttitor nisl volutpat molestie. Quisque vehicula dui eu ipsum vehicula cursus.
+          </p>
+        </div>
+      </div>
+
+
+
+        <div class="row designe-desc">
           <div class="cols col-6">
             <p>
               Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec ut molestie orci. Mauris sed magna bibendum, egestas est eget, mattis tortor. Nam finibus massa sed consectetur ornare. Nulla nec libero vitae metus varius dignissim. Donec porta porttitor nisl volutpat molestie. Quisque vehicula dui eu ipsum vehicula cursus.
@@ -145,6 +195,7 @@
     });
 </script>
 
+<script src="js/menu.js"></script>
 
 </body>
 </html>
