--- a/index.html
+++ b/index.html
@@ -1,269 +1,343 @@
-<!DOCTYPE>
+<!doctype html>
 <html>
 <head>
- <title></title>
- <meta charset="utf-8">
- <meta name="viewport" content="width=device-width, initial-scale=1">
- <link rel="stylesheet" type="text/css" href="css/style.css">
- <link rel="stylesheet" href="fonts/font-awesome/css/font-awesome.min.css">
- <link rel="stylesheet" href="css/responsiveslides.css">
+<meta charset="utf-8">
+<meta name="viewport" content="width=device-width, initial-scale=1.0">
+<title>Anton Shkiryak</title>
+<link rel="stylesheet" type="text/css" href="css/style.css">
+<link rel="stylesheet" href="fonts/font-awesome/css/font-awesome.min.css">
+<link rel="stylesheet" href="fonts/ProximaNova/stylesheet.css">
+
+<script src="js/jquery-2.1.3.min.js"></script>
+
+<!--відгуки-->
+
+<link rel="stylesheet" href="css/owl.carousel.min.css">
+<link rel="stylesheet" href="css/owl.theme.default.min.css">
+
+<script src="js/owl.carousel.min.js"></script>
+<script src="js/custom.js"></script>
 
 
+<!--lag-menu-->
+
+<script type="text/javascript">
+var m_id = new Array('s_mn_1');
+listStart = function allclose() {
+  for (i=0; i < m_id.length; i++){
+  document.getElementById(m_id[i]).style.display = "none";
+  }
+}
+function menuOpen(id){
+  for (i=0; i < m_id.length; i++){
+  if (id != m_id[i]){
+  document.getElementById(m_id[i]).style.display = "none";
+  }
+  }
+  if (document.getElementById(id).style.display == "block"){
+  document.getElementById(id).style.display = "none";
+  }else{
+  document.getElementById(id).style.display = "block";
+  }
+}
+window.onload=listStart;
+</script>
+
+<script src="js/fb.js"></script>
 
 </head>
 
 <body>
 
-  <div id="header">
-    <div class="wrap">
-      <div class="container header-top">
+<div class="header">
 
-        <div class="row">
-          <div class="cols col-6 logo">
-            <img src="img/logo.jpg">
-          </div>
-
-          <div class="cols col-6 phone">
-            <ul>
-              <li>+49(0)1702078827</li>
-            <li>+49(0)4313393912</li>
-
-              <li>Jacobi@karpatenblockhaus</li>
-            </ul>
-          </div>
-        </div>
-    </div>
-    <div class="container menu-top">
-        <div class="row">
-          <div class="cols col-8 main-menu">
-
-            <div class="menu menu-mob">
-                  <!-- Иконка меню -->
-                  <div class="icon-close">
-                    <img src="img/close-btn.png">
-                  </div>
-
-                  <!-- Меню -->
-                  <ul>
-                    <li><a href="index.html" class="active">Головна</a></li>
-                    <li><a href="technology.html">Технології</a></li>
-                    <li><a href="gallery.html">Галерея</a></li>
-                    <li><a href="project.html">Проекти</a></li>
-                    <li><a href="designe.html">Дизайн</a></li>
-                  </ul>
-                </div>
-
-
-                  <div class="icon-menu">
-                    <img src="img/menu-ham-icon.png">
-                  </div>
-
-          <div class="menu-desc">
-            <ul>
-              <li><a href="index.html" class="active">Головна</a></li>
-              <li><a href="technology.html">Технології</a></li>
-              <li><a href="gallery.html">Галерея</a></li>
-              <li><a href="project.html">Проекти</a></li>
-              <li><a href="designe.html">Дизайн</a></li>
-            </ul>
-          </div>
-        </div>
-
-      </div><!--end container-->
-    </div><!--end wrap-->
-  </div><!--end header-->
-
-
-
-<div class="container">
-  <!-- Slideshow 4 -->
-      <div class="callbacks_container">
-        <ul class="rslides" id="slider4">
-          <li>
-            <img src="img/slide1.jpg" alt="">
-          </li>
-          <li>
-            <img src="img/slide2.jpg" alt="">
-          </li>
-          <li>
-            <img src="img/slide3.jpg" alt="">
-          </li>
-          <li>
-            <img src="img/slide4.jpg" alt="">
-          </li>
+  <div class="container">
+    <div class="row">
+		  <div class="cols col-4 phone">
+        <ul>
+          <li>(093) 103 1 103</li>
+          <li>(097) 103 1 103</li>
         </ul>
       </div>
+
+      <div class="cols col-4 logo">
+        <a href="#"><img src="img/logo1.png" alt=""></a>
+      </div>
+
+      <div class="cols col-4 addres">
+        <ul>
+          <li>г. Киев</li>
+          <li class="street">ул. Платона Майбороды 32</li>
+        </ul>
+      </div>
+    </div>
+  </div>
+
+</div><!-- header -->
+
+<div class="menu">
+  <div class="container">
+
+    <div class="cols col-2">
+      <div id="m_body">
+				<ul>
+					<li><a href="#" onclick="menuOpen('s_mn_1');return(false)">RU</a>
+						<ul id="s_mn_1">
+							 <li><a href="#">UA</a></li>
+						</ul>
+					</li>
+				</ul>
+			</div>
+    </div>
+
+    <div class="cols col-8 main-menu">
+      <ul>
+        <li class="active"><a href="#">Главная</a></li>
+        <li><a href="#">Знакомство</a></li>
+        <li><a href="#">Консультация</a></li>
+        <li><a href="#">Лечение</a></li>
+        <li><a href="#">Медиа</a></li>
+        <li><a href="#">Блог</a></li>
+        <li><a href="#">Контакты</a></li>
+      </ul>
+    </div>
+
+    <div class="cols col-2 button">
+      <a href="#">ЗАПИСЬ НА ПРИЙОМ</a>
+    </div>
+
+  </div>
 </div>
 
-<div class="container slogan">
-  <div class="row">
+<div class="banner">
+  <div class="container">
     <div class="cols col-12">
-      <h1>Naturstammblockhäuser, kanadischer Technologie</h1>
+      <img src="img/anton banner.jpg">
+      <p>Сучаcний погляд на <br><span>нейрохірургію та онкологію</span></p>
     </div>
   </div>
 </div>
 
 
-  <div id="main">
-
-
-    <div class="container">
-      <div class="row">
-        <div class="cols col-12 border">
-          <img src="img/bord.png">
-        </div>
-     </div>
-
-      <div class="row technology">
-
-        <div class="cols col-3 first">
-          <div class="cols col-12">
-            <img src="img/icon-3.png">
-            <p>Природня <br>вентиляція</p>
-          </div>
-          <div class="cols col-12">
-            <img src="img/icon-1.png">
-            <p>Довговічність</p>
-          </div>
-          <div class="cols col-12">
-            <img src="img/icon-2.png">
-            <p>Енергоефективність</p>
-          </div>
-        </div>
-
-        <div class="cols col-6 img-tech">
-          <img src="img/technology.png">
-        </div>
-
-        <div class="cols col-3 second">
-          <div class="cols col-12">
-            <img src="img/icon-4.png">
-            <p>Не потребує <br> оздоблення</p>
-          </div>
-          <div class="cols col-12">
-            <img src="img/icon-5.png">
-            <p>Екологічність</p>
-          </div>
-          <div class="cols col-12">
-            <img src="img/icon-6.png">
-            <p>Збереження температури<br> в приміщенні</p>
-          </div>
-        </div>
-
-      </div>
-
-    </div> <!--end container technology-->
-
-
-<div class="container proects">
-
-<div class="row">
-  <div class="cols col-12">
-
-  <div class="border">
-    <img src="img/bord-w.png">
+<div class="stat">
+  <div class="container">
+    <div class="cols col-3">
+      <h2>Нейрохірургія</h2>
+      <p>Оперативні втручання з мінімальною травматичністю головного та спинного мозку та швидкою реабілітацією пацієнта.</p>
+    </div>
+    <div class="cols col-3">
+      <h2>Онкологія </h2>
+      <p>Встановлення тактики <br>лікування при будь-яких пухлинних паталогіях, оптимізовано <br>під пацієнта.
+  </p>
+    </div>
+    <div class="cols col-3">
+      <h2>Хіміотерапія</h2>
+      <p>Визначення відповідної схеми та рекомендації щодо підтримуючої терапії.
+  </p>
+    </div>
+    <div class="cols col-3">
+      <h2>Радіотерапія</h2>
+      <p>Консультація щодо об’єму променевого лікування та контроль результатів.</p>
+    </div>
   </div>
-  <h2>Наші проекти</h2>
-
-
-    <div class="cols col-4">
-      <div>
-        <div class="img-proects">
-          <img src="img/proect.png">
-        </div>
-        <div class="name-proects">
-          <h4>Проект 1</h4>
-          <div class="border">
-            <img src="img/bord.png">
-          </div>
-          <p class="area">Площа: 200 кв.м</p>
-          <a href="project-inner.html" class="btn">Детальніше</a>
-        </div>
-      </div>
-    </div>
-
-    <div class="cols col-4">
-      <div>
-        <div class="img-proects">
-          <img src="img/proect.png">
-        </div>
-        <div class="name-proects">
-          <h4>Проект 1</h4>
-          <div class="border">
-            <img src="img/bord.png">
-          </div>
-          <p class="area">Площа: 200 кв.м</p>
-          <a href="project-inner.html" class="btn">Детальніше</a>
-        </div>
-      </div>
-    </div>
-
-    <div class="cols col-4">
-      <div>
-        <div class="img-proects">
-          <img src="img/proect.png">
-        </div>
-        <div class="name-proects">
-          <h4>Проект 1</h4>
-          <div class="border">
-            <img src="img/bord.png">
-          </div>
-          <p class="area">Площа: 200 кв.м</p>
-          <a href="project-inner.html">Детальніше</a>
-        </div>
-      </div>
-    </div>
-    </div>
-
 </div>
 
-  <div class="row btn">
-      <div class="cols col-12">
-      <a href="project.html" class="btn-main">Більше проектів</a>
+
+<div class="about-us">
+  <div class="container">
+      <div class="cols col-2">
+        <img src="img/DSC_4441.jpg" />
+      </div>
+
+      <div class="cols col-8">
+        <p><strong>Шкіряк Антон Антонович</strong> – головний лікар онкологічного центру «Клініка Спіженко», лікар-нейрохірург, онколог, менеджер та громадський діяч в сфері охорони здоров'я України, асистент опорної кафедри нейрохірургії Національної медичної академії післядипломної освіти ім. П.Л. Шупика, експерт багатьох медичних
+та соціальних програм на центральних телеканалах країни.</p>
+      </div>
+
+      <div class="cols col-2">
+          <a href="#" class="button" title="Знайомство">Подробнее</a>
       </div>
   </div>
+</div>
 
-</div><!--end container proects-->
 
+<div class="patient">
+  <div class="container">
 
-  </div><!--end main-->
+    <div class="cols col-3">
+      <div class="services">
+        <p>3500+</p>
+        <p>часов в операционной</p>
+      </div>
+    </div>
 
-  <div id="footer">
-  <div class="row">
-    <h1>Karpatenblockhaus © Будівництво диких зрубів преміум класу</h1>
+    <div class="cols col-3">
+      <div class="services">
+      <p>2000+</p>
+      <p>консультаций в год</p>
+      </div>
+    </div>
+
+  <div class="cols col-6 custom">
+      <h2>Пацієнти кажуть</h2>
+				<div id="customNav" class="owl-my-nav"></div>
+				<div class="owl-carousel block-items">
+				    <div class="item">
+				    	<div class="inner-testimonial">
+				    		<p class="text-testimonial">Особлива подяка головному лікарю - Антону Антоновичу Шкіряку! Дякую за Вашу важку працю і терпіння. Методи лікування серед усіх запропонованих варіантів виявилися найсучаснішими, і що найбільш важливо - результативними і безпечними.</p>
+							<h3 class="city-name">Олександра, Україна</h3>
+				    	</div>
+			    	</div>
+				    <div class="item">
+				    	<div class="inner-testimonial">
+				    		<p class="text-testimonial">Від щирого серця висловлюю величезну подяку Антону Антоновичу Шкіряку! Ви зробили великий внесок в моєму одужанні.</p>
+							<h3 class="city-name">Гульнур, Казахстан</h3>
+						</div>
+			    	</div>
+				    <div class="item">
+				    	<div class="inner-testimonial">
+				    		<p class="text-testimonial">Через три місяці після лікування, обстеження показали що пухлина зменшується. А ще через три місяці, знову поступові позитивні результати контрольного обстеження. Щира подяка співробітникам Клініки Спіженко на чолі з Наталією Юріївною Спіженко та головним лікарем Антоном Антоновичем Шкіряком!</p>
+							<h3 class="city-name">Марія, Україна</h3>
+						</div>
+			    	</div>
+            <div class="item">
+				    	<div class="inner-testimonial">
+				    		<p class="text-testimonial">Дякуємо за всі поради і зусилля доктора Шкіряка! На початку лікування ми навіть не уявляли що буде така позитивна динаміка в одужанні. Також дякуючи командній роботі всіх лікарів клініки Спіженко, мій стан з перших хвилин перебування покращився.</p>
+							<h3 class="city-name">Ференц, Угорщина</h3>
+						</div>
+			    	</div>
+				</div>
+    </div>
+
+	</div>
+</div> <!--end patient-->
+
+<div class="send">
+  <div class="container">
+
+    <div class="cols col-6">
+      <div class="send-data">
+        <img src="img/support.png"/>
+        <p>
+          Отправить данные
+        </p>
+      </div>
+    </div>
+
+    <div class="cols col-6">
+      <p class="send-description">Отправьте результаты обследований (снимки МРТ или КТ, заключения, анамнез) для получения заочного мнения врача.</p>
+    </div>
+
   </div>
-  </div><!--end footer-->
+</div>
+
+<div class="blog">
+  <div class="container">
+
+    <div class="cols col-4">
+      <div class="blog-border">
+        <div class="blog-name">
+          <h3>УНН // В Украине искажена система университетских клиник - А.Шкиряк</h3>
+        </div>
+        <div class="blog-time">
+          2017-12-13 19:17:00
+        </div>
+        <div class="blog-img">
+          <img src="img/blog-1.PNG"/>
+        </div>
+        <div class="blog-descr">
+          Университетские клиники или академические больницы должны быть созданы на базе мощных медицинских учреждений, отметил он. Уникальность медицины как сферы практической деятельности…
+        </div>
+        <div class="read-more">
+          <a href="#">Читать дальше</a>
+        </div>
+      </div>
+    </div>
+
+    <div class="cols col-4">
+      <div class="blog-border">
+        <div class="blog-name">
+          <h3>УНН // В Украине искажена система университетских клиник - А.Шкиряк</h3>
+        </div>
+        <div class="blog-time">
+          2017-12-13 19:17:00
+        </div>
+        <div class="blog-img">
+          <img src="img/blog-1.PNG"/>
+        </div>
+        <div class="blog-descr">
+          Университетские клиники или академические больницы должны быть созданы на базе мощных медицинских учреждений, отметил он. Уникальность медицины как сферы практической деятельности…
+        </div>
+        <div class="read-more">
+          <a href="#">Читать дальше</a>
+        </div>
+      </div>
+    </div>
+
+    <div class="cols col-4">
+      <div class="blog-border">
+        <div class="blog-name">
+          <h3>УНН // В Украине искажена система университетских клиник - А.Шкиряк</h3>
+        </div>
+        <div class="blog-time">
+          2017-12-13 19:17:00
+        </div>
+        <div class="blog-img">
+          <img src="img/blog-1.PNG"/>
+        </div>
+        <div class="blog-descr">
+          Университетские клиники или академические больницы должны быть созданы на базе мощных медицинских учреждений, отметил он. Уникальность медицины как сферы практической деятельности…
+        </div>
+        <div class="read-more">
+          <a href="#">Читать дальше</a>
+        </div>
+      </div>
+    </div>
+
+  </div>
+</div>
 
 
+<div class="text-main">
+  <div class="container">
+    <div class="cols col-12">
+      <p>Для меня важно, чтобы пациент был поинформирован.</p>
+    </div>
+  </div>
+</div>
 
-<!--Slider-->
+<div class="social">
+  <div class="container">
+    <div class="cols col-6">
+      <div class="widget-facebook">
+				  <iframe id="facebook_iframe" class="facebook_iframe"></iframe>
+			</div>
+    </div>
+    <div class="cols col-6">
+      <iframe width="560" height="315" src="https://www.youtube.com/embed/9ATawrVcDY4" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe>
+    </div>
+  </div>
+</div>
 
-<script src="https://code.jquery.com/jquery-2.2.0.min.js" type="text/javascript"></script>
-
-  <script src="js/responsiveslides.min.js"></script>
-  <script>
-    // You can also use "$(window).load(function() {"
-    $(function () {
-
-      // Slideshow 4
-      $("#slider4").responsiveSlides({
-        auto: true,
-        pager: false,
-        nav: false,
-        speed: 500,
-        namespace: "callbacks",
-        before: function () {
-          $('.events').append("<li>before event fired.</li>");
-        },
-        after: function () {
-          $('.events').append("<li>after event fired.</li>");
-        }
-      });
-
-    });
-  </script>
-
-   <script src="js/menu.js"></script>
+<div class="footer">
+  <div class="container">
+    <div class="cols col-2 copyright">
+      <img src="img/logo-footer.png"/>
+      <i class="fa fa-copyright" aria-hidden="true"></i> shkiryak.com.ua, 2018
+    </div>
+    <div class="cols col-5">
+      <p>Информация, опубликованная на сайте, предназначена только для ознакомления. Обязательно проконсультируйтесь со специалистом, чтобы не нанести вред своему здоровью.
+      </p>
+    </div>
+    <div class="cols col-5 soc-icons">
+        <a href="https://www.facebook.com/shkiryakofficial/" target="_blank"><i class="fa fa-facebook-square" aria-hidden="true"></i></a>
+        <a href="https://twitter.com/DrShkiryak" target="_blank"><i class="fa fa-twitter-square" aria-hidden="true"></i></a>
+        <a href="https://www.instagram.com/anthonyshkiryak/" target="_blank"><i class="fa fa-instagram" aria-hidden="true"></i></a>
+        <a href="https://www.youtube.com/channel/UCVlyfBRYnvjN09irXqQdw6g/" target="_blank"><i class="fa fa-youtube-square" aria-hidden="true"></i></a>
+        <a href="https://www.linkedin.com/in/anton-shkiryak-898256b4/" target="_blank"><i class="fa fa-linkedin-square" aria-hidden="true"></i></a>
+    </div>
+  </div>
+</div>
 
 </body>
 </html>
