--- a/index.html
+++ b/index.html
@@ -327,9 +327,9 @@
     <div class="cols col-6">
       <div class="send-data">
         <img src="img/support.png"/>
-        <p>
+        <a href="#">
           Отправить данные
-        </p>
+        </a>
       </div>
     </div>
 
@@ -423,7 +423,7 @@
 			</div>
     </div>
     <div class="cols col-6">
-      <iframe width="560" height="315" src="https://www.youtube.com/embed/9ATawrVcDY4" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe>
+      <iframe class="yt_ifrane" width="560" height="315" src="https://www.youtube.com/embed/9ATawrVcDY4" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe>
     </div>
   </div>
 </div>
