--- a/index.html
+++ b/index.html
@@ -439,11 +439,13 @@
       </p>
     </div>
     <div class="cols col-5 soc-icons">
+      <div>
         <a href="https://www.facebook.com/shkiryakofficial/" target="_blank"><i class="fa fa-facebook-square" aria-hidden="true"></i></a>
         <a href="https://twitter.com/DrShkiryak" target="_blank"><i class="fa fa-twitter-square" aria-hidden="true"></i></a>
         <a href="https://www.instagram.com/anthonyshkiryak/" target="_blank"><i class="fa fa-instagram" aria-hidden="true"></i></a>
         <a href="https://www.youtube.com/channel/UCVlyfBRYnvjN09irXqQdw6g/" target="_blank"><i class="fa fa-youtube-square" aria-hidden="true"></i></a>
         <a href="https://www.linkedin.com/in/anton-shkiryak-898256b4/" target="_blank"><i class="fa fa-linkedin-square" aria-hidden="true"></i></a>
+      </div>
     </div>
   </div>
 </div>
