--- a/index.html
+++ b/index.html
@@ -51,9 +51,9 @@
   	var nav = $('.menu');
 
   	$(window).scroll(function () {
-  		if ($(this).scrollTop() > 120 && window.innerWidth >= 600 ) {
+  		if ($(this).scrollTop() > 120 && window.innerWidth >= 800 ) {
   			nav.addClass("f-menu");
-  		} else if ($(this).scrollTop() > 1 && window.innerWidth < 600 ) {
+  		} else if ($(this).scrollTop() > 1 && window.innerWidth < 800 ) {
           nav.addClass("f-menu");
         } else {
   			nav.removeClass("f-menu");
@@ -62,7 +62,7 @@
 
    var logo = $('.logo-fixed');
     $(window).scroll(function () {
-  		if ($(this).scrollTop() > 120 && window.innerWidth >= 600) {
+  		if ($(this).scrollTop() > 120 && window.innerWidth >= 800) {
   			logo.addClass("logo-hidden");
   		} else {
   			logo.removeClass("logo-hidden");
@@ -71,7 +71,7 @@
 
     var logom = $('.logo-fixed-m');
      $(window).scroll(function () {
-   		if ($(this).scrollTop() > 1 && window.innerWidth < 600) {
+   		if ($(this).scrollTop() > 1 && window.innerWidth < 800) {
    			logom.addClass("logo-hidden-m");
    		} else {
    			logom.removeClass("logo-hidden-m");
@@ -80,9 +80,9 @@
 
     var lang = $('.lang-menu');
      $(window).scroll(function () {
-   		if ($(this).scrollTop() > 120 && window.innerWidth >= 600) {
+   		if ($(this).scrollTop() > 120 && window.innerWidth >= 800) {
    			lang.addClass("lang-hidden");
-   		} else if ($(this).scrollTop() > 1 && window.innerWidth < 600) {
+   		} else if ($(this).scrollTop() > 1 && window.innerWidth < 800) {
           lang.addClass("lang-hidden");
         } else {
    			lang.removeClass("lang-hidden");
@@ -100,7 +100,7 @@
 
     var headerm = $('.header-mobile');
      $(window).scroll(function () {
-   		if ($(this).scrollTop() > 1 && window.innerWidth < 600) {
+   		if ($(this).scrollTop() > 1 && window.innerWidth < 800) {
    			headerm.addClass("header-mobile-hidden");
    		} else {
    			headerm.removeClass("header-mobile-hidden");
@@ -311,7 +311,7 @@
     </div>
 
     <div class="cols col-3">
-      <div class="services">
+      <div class="services services-r">
       <p>2000+</p>
       <p>консультаций в год</p>
       </div>
