--- a/index.html
+++ b/index.html
@@ -116,7 +116,7 @@
       }
     });
 
-    
+
 
   });
 
@@ -170,10 +170,15 @@
 
                 <!-- Меню -->
                 <ul>
-                  <li class="active"><a href="#">Главная</a></li>
-                  <li><a href="#">Знакомство</a></li>
-                  <li><a href="#">Консультация</a></li>
-                  <li><a href="#">Лечение</a></li>
+                  <li class="active"><a href="index.html">Главная</a></li>
+                  <li><a href="aboutus.html">Знакомство</a></li>
+                  <li><a href="#">Консультация</a>
+                    <ul>
+                      <li><a href="online.html">Онлайн консультация</a></li>
+                      <li><a href="meeting.html">Очная консультация</a></li>
+                    </ul>
+                  </li>
+                  <li><a href="therapy.html">Лечение</a></li>
                   <li><a href="#">Медиа</a></li>
                   <li><a href="#">Блог</a></li>
                   <li><a href="#">Контакты</a></li>
@@ -215,10 +220,15 @@
 
     <div class="cols col-8 main-menu">
       <ul class="menu-font">
-        <li class="active"><a href="#">Главная</a></li>
-        <li><a href="#">Знакомство</a></li>
-        <li><a href="#">Консультация</a></li>
-        <li><a href="#">Лечение</a></li>
+        <li class="active"><a href="index.html">Главная</a></li>
+        <li><a href="aboutus.html">Знакомство</a></li>
+        <li><a href="#">Консультация</a>
+          <ul class="drop-down">
+            <li><a href="online.html">Онлайн консультация</a></li>
+            <li><a href="meeting.html">Очная консультация</a></li>
+          </ul>
+        </li>
+        <li><a href="therapy.html">Лечение</a></li>
         <li><a href="#">Медиа</a></li>
         <li><a href="#">Блог</a></li>
         <li><a href="#">Контакты</a></li>
